--- a/index.html
+++ b/index.html
@@ -4,10 +4,10 @@
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1, minimum-scale=1">
   <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
-  <script src="libs/jquery-1.11.3.min.js"></script>
-  <script src="libs/three.min.js"></script>
+  <script src="js/jquery-1.11.3.min.js"></script>
+  <script src="js/three.min.js"></script>
   
-  <script src="flower/flower.js"></script>
+  <script src="js/flower.js"></script>
 
   <!--[if (gt IE 8) | (IEMobile)]><!-->
   <link rel="stylesheet" href="css/style.css">
